# polypal

./: LICENSE  README.md  setup.cfg  setup.py
polypal/: main.py  make_ff.py  make_gromacs.py  make_pdb.py  make_top.py
tutorial/Step2/: PES_mktop.top
tutorial/Step2/PES_qforce/: PES_charge_property.txt  PES_opt_property.txt  PES_opt_trj.xyz  frequencies.nmd  gas.gro
tutorial/Step3/: PES_opt.xyz
tutorial/Step4/: ext_lj
tutorial/Step5/: PES_M_top  PES_endAA_top  PES_qforce_assignments.txt  PES_qforce_ff.txt
tutorial/Step6-7/: PES_endZZ_top  PES_qforce.itp  settings.ini
tutorial/Step6-7/8mer_only/: 8mer.gro  8mer.itp  8mer_final.itp  8mer_only.gro  8mer_only.top  index_8mer_only.ndx
tutorial/Step6-7/8mer_only/8mer_charges/cif/: 8mer_final.fw2.cif
tutorial/Step6-7/8mer_only/8mer_charges/pqr/: 8mer_final-QEq-Rappe 1991.pqr
tutorial/Step6-7/8mer_only/8mer_charges/txt/: 8mer_final-QEq-Rappe 1991.txt
tutorial/Step8/: 8mer_final.top  anneal_300_to_300.mdp  equil_npt_100ps_1bar_300K.mdp  equil_npt_50ps_1000bar_300K.mdp  equil_npt_50ps_100bar_300K.mdp  equil_nvt_300K_100ps.mdp  gromacs_full.sh  ini.gro  minim.mdp  npt_5ns_1bar_300K.mdp
