[metadata]
name = polypal
version = 1.0.0
description = A Python package to assist with parameterization and construction of all-atomistic polymer simulations
author = Molly C. Warndorf
author_email = warndorf@mit.edu
url = https://github.com/warndorf/polypal

[options]
setup-requires =
    setuptools

